updated img and glow pt 2 case

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <div class="break"></div>
             <h2>
                 <a href="http://stockholmdesignlab.se" target="_blank">
-                    Stockholm Design Lab<br>
+                    <h1>Stockholm Design Lab</h1>
                     Graphic Designer (Internship)<br>
-                    Apr 2021 – Aug 2021
+                    04/2021 – 08/2021
                 </a>
             </h2>
         <div class="double-break"></div>
@@ -36,17 +36,17 @@
         <div class="break"></div>
             <h2>
                 <a href="http://beckmans.se" target="_blank">
-                    Beckmans College of Design<br>
-                    BFA – Visual Communication<br>
-                    2019 – 2022
+                    <h1>Beckmans College of Design</h1>
+                    Visual Communication (BFA)<br>
+                    09/2019 – 06/2022
                 </a>
             </h2>
         <div class="break"></div>
             <h2>
                 <a href="http://berghs.se" target="_blank">
-                    Berghs School of Communication<br>
-                    Graphic Design<br>
-                    2019
+                    <h1>Berghs School of Communication</h1>
+                    Graphic Design (Evening classes)<br>
+                    02/2019 – 04/2019
                 </a>
             </h2>
         </div>
@@ -58,8 +58,9 @@
                 <h2>© 2022</h2>
             </div>
         </div>
-    </section>
+    </section>  
     <div class="project-wrapper">
+        
         <section class="work-wrapper">
             <div class="project">
                 <div class="slick-container">
@@ -69,16 +70,16 @@
                     </div>
                     <div class="image-container">
                         <div class="image">
-                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-1.png" class="desktop-image">
+                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-1.jpg" class="desktop-image">
                         </div>
                         <div class="image">
-                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-studio-2.jpg" class="desktop-image" loading="lazy">
+                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-2.jpg" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-logo.png" class="desktop-image" loading="lazy">
+                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-logo.jpg" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-packaging.png" class="desktop-image" loading="lazy">
+                            <img src="images/ambre-antique/eric-rosmark-ambre-antique-packaging.jpg" class="desktop-image" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -102,6 +103,7 @@
                 </div>
             </div>
         </section>
+
         <section class="work-wrapper">
             <div class="project">
                 <div class="slick-container">
@@ -111,16 +113,16 @@
                     </div>
                     <div class="image-container">
                         <div class="image">
-                            <img src="images/passa/eric-rosmark-passa-full.png" class="desktop-image" loading="lazy">
+                            <img src="images/passa/eric-rosmark-passa-full.jpg" class="desktop-image">
                         </div>
                         <div class="image">
-                            <img src="images/passa/eric-rosmark-passa-1.png" class="desktop-image" loading="lazy">
+                            <img src="images/passa/eric-rosmark-passa-1.jpg" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/passa/eric-rosmark-passa-2.png" class="desktop-image" loading="lazy">
+                            <img src="images/passa/eric-rosmark-passa-2.jpg" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/passa/eric-rosmark-passa-3.png" class="desktop-image" loading="lazy">
+                            <img src="images/passa/eric-rosmark-passa-3.jpg" class="desktop-image" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -143,6 +145,7 @@
                 </div>
             </div>
         </section>
+
         <section class="work-wrapper">
             <div class="project">
                 <div class="slick-container">
@@ -150,24 +153,24 @@
                         <div class="paginator-left"></div>
                         <div class="paginator-right"></div>
                     </div>
-                    <div class="image-container">
+                                        <div class="image-container">
                         <div class="video">
                             <video src="video/eric-rosmark-material-tales.mp4" playsinline autoplay muted loop width="100%" height="100%" loading="lazy"></video>
                         </div>
                         <div class="image">
-                            <img src="images/material-tales/eric-rosmark-material-tales-amanda-rascka.png" class="desktop-image" loading="lazy">
+                            <img src="images/material-tales/eric-rosmark-material-tales-amanda-rascka.jpg" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/material-tales/eric-rosmark-material-tales-thomas-wieser.png" class="desktop-image" loading="lazy">
+                            <img src="images/material-tales/eric-rosmark-material-tales-thomas-wieser.jpg" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/material-tales/eric-rosmark-material-tales-isabelle-sjoman.png" class="desktop-image" loading="lazy">
+                            <img src="images/material-tales/eric-rosmark-material-tales-isabelle-sjoman.jpg" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/material-tales/eric-rosmark-material-tales-kevin-nilsson.png" class="desktop-image" loading="lazy">
+                            <img src="images/material-tales/eric-rosmark-material-tales-kevin-nilsson.jpg" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/material-tales/eric-rosmark-material-tales-gabriella-danerlov.png" class="desktop-image" loading="lazy">
+                            <img src="images/material-tales/eric-rosmark-material-tales-gabriella-danerlov.jpg" class="desktop-image" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -192,6 +195,7 @@
                 </div>
             </div>
         </section>
+
         <section class="work-wrapper">
             <div class="project">
                 <div class="slick-container">
@@ -201,29 +205,28 @@
                     </div>
                     <div class="image-container">
                         <div class="image">
-                            <img src="images/sequence/eric-rosmark-sequence-paper-1.png" class="desktop-image" loading="lazy">
+                            <img src="images/sequence/eric-rosmark-sequence-paper-1.jpg" class="desktop-image" loading="lazy">
                         </div>
                         <div class="video">
-                            <video src="video/eric-rosmark-sequence-paper-animation-loop.mp4" playsinline autoplay muted loop width="100%" height="100%" loading="lazy"></video>
+                            <video src="video/eric-rosmark-sequence-paper.mp4" playsinline autoplay muted loop width="100%" height="100%" loading="lazy"></video>
                         </div>
                         <div class="image">
-                            <img src="images/sequence/eric-rosmark-sequence-paper-page-2-3.png" class="desktop-image" loading="lazy">
+                            <img src="images/sequence/eric-rosmark-sequence-paper-page-2-3.jpg" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/sequence/eric-rosmark-sequence-paper-page-4-5-x2.png" class="desktop-image" loading="lazy">
+                            <img src="images/sequence/eric-rosmark-sequence-paper-page-4-5-x2.jpg" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/sequence/eric-rosmark-sequence-paper-page-6-7.png" class="desktop-image" loading="lazy">
+                            <img src="images/sequence/eric-rosmark-sequence-paper-page-6-7.jpg" class="desktop-image" loading="lazy">
                         </div>
                         <div class="image">
-                            <img src="images/sequence/eric-rosmark-sequence-paper-page-8-1.png" class="desktop-image" loading="lazy">
-                        </div>
+                            <img src="images/sequence/eric-rosmark-sequence-paper-page-8-1.jpg" class="desktop-image" loading="lazy">
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="title">
-                        <h1>Sequence Paper</h1>
+                        <h1>Sequence</h1>
                         <h2 id="year-mobile">2021</h2>
                     </div>
                     <div class="roles">
@@ -239,8 +242,125 @@
                 </div>
             </div>
         </section>
+<!--
+        <section class="work-wrapper">
+            <div class="project">
+                <div class="slick-container">
+                    <div class="paginator">
+                        <div class="paginator-left"></div>
+                        <div class="paginator-right"></div>
+                    </div>
+                    <div class="image-container">
+                        <div class="video">
+                            <video src="video/eric-rosmark-gronsaksdisken.mov" playsinline autoplay muted loop width="100%" height="100%" loading="lazy"></video>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="title">
+                        <h1>Grönsaksdisken</h1>
+                        <h2 id="year-mobile">2021</h2>
+                    </div>
+                    <div class="roles">
+                        <h2>Art Direction</h2>
+                        <h2>UI / UX Design</h2>
+                        <h2>Development</h2>
+                    </div>
+                    <div class="text">
+                        <p>Have you ever thought about how different vegetables taste depending on what season it is? It can feel difficult to be seasonally smart when navigating through the vegetable counter when we're shopping. Grönsaksdisken (The Vegetable Counter) is an application that helps you stay seasonally smart, all year round, and helps us contribute towards a more sustainable planet! Displayed at the exhibition <a href=”https://www.svenskttenn.com/se/sv/utstallningar/food-for-thought/”>Food for Thought at Svenskt Tenn</a> in the spring of 2021. Made in collaboration with Jonna Lindberg.</p>
+                    </div>
+                    <div class="year">
+                        <h2>2021</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+-->        
+
+        <section class="work-wrapper">
+            <div class="project">
+                <div class="slick-container">
+                    <div class="paginator">
+                        <div class="paginator-left"></div>
+                        <div class="paginator-right"></div>
+                    </div>
+                    <div class="image-container">
+                        <div class="image">
+                            <img src="images/the-glow-pt-2/eric-rosmark-the-glow-pt-2-front.jpg" class="desktop-image" loading="lazy">
+                        </div>
+                        <div class="image">
+                            <img src="images/the-glow-pt-2/eric-rosmark-the-glow-pt-2-back.jpg" class="desktop-image" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="title">
+                        <h1>The Glow Pt. 2</h1>
+                        <h2 id="year-mobile">2020</h2>
+                    </div>
+                    <div class="roles">
+                        <h2>Art Direction</h2>
+                        <h2>Graphic Design</h2>
+                        <h2>3D Design</h2>
+                    </div>
+                    <div class="text">
+                        <p>Conceptual album cover for The Glow Pt.2 (2001) by The Microphones. Mixed media techniques featuring 3D typography inspired by black metal logotypes. The back sleeve features poetry that interprets the album's title track in swedish. Made as part of the course "Poesi att göra" at Beckmans College of Design.
+                        <div class="double-break"></div>
+                        <a id="email" href=”https://pwelverumandsun.bandcamp.com/album/the-glow-pt-2”>Listen to the album and support Phil Elverums work.</a></p>
+                    </div>
+                    <div class="year">
+                        <h2>2020</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
+        <section class="info-wrapper-mobile">
+        <div class="experience-mobile">
+            <h1>Experience</h1>
+            <div class="break"></div>
+                <h2>
+                    <a href="http://stockholmdesignlab.se" target="_blank">
+                        <h1>Stockholm Design Lab</h1>
+                        Graphic Designer (Internship)<br>
+                        04/2021 – 08/2021
+                    </a>
+                </h2>
+            <div class="double-break"></div>
+            </div>
+            <div class="education-mobile">
+            <h1>Education</h1>
+            <div class="break"></div>
+                <h2>
+                    <a href="http://beckmans.se" target="_blank">
+                        <h1>Beckmans College of Design</h1>
+                        Visual Communication (BFA)<br>
+                        09/2019 – 06/2022
+                    </a>
+                </h2>
+            <div class="break"></div>
+                <h2>
+                    <a href="http://berghs.se" target="_blank">
+                        <h1>Berghs School of Communication</h1>
+                        Graphic Design (Evening classes)<br>
+                        02/2019 – 04/2019
+                    </a>
+                </h2>
+            </div>
+            <div class="double-break"></div>
+            <div class="footer-mobile">
+                <div class="desktop-links">
+                    <a href="https://www.instagram.com/ericrosmark/" target="_blank">Instagram</a><br>
+                    <a href="https://www.linkedin.com/in/ericrosmark/" target="_blank">LinkedIn</a><br>
+                    <div class="break"></div>
+                    <h2>© 2022</h2>
+                </div>
+            </div>
         </div>
+        </section>
     </div>
+</div>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script>
