--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
                     </div>
                     <div class="text">
                         <p>Conceptual album cover for The Glow Pt.2 (2001) by The Microphones. Mixed media techniques featuring 3D typography inspired by black metal logotypes. The back sleeve features poetry that interprets the album's title track in swedish. Made as part of the course "Poesi att göra" at Beckmans College of Design.
-                        <div class="double-break"></div>
-                        <a id="email" href=”https://pwelverumandsun.bandcamp.com/album/the-glow-pt-2”>Listen to the album and support Phil Elverums work.</a></p>
+                        <!--<div class="double-break"></div>
+                        <a id="email" href=”https://pwelverumandsun.bandcamp.com/album/the-glow-pt-2”>Listen to the album and support Phil Elverums work.</a>--></p>
                     </div>
                     <div class="year">
                         <h2>2020</h2>
