--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
                     <div class="roles">
                         <h2>Art Direction</h2>
                         <h2>Editorial Design</h2>
+                        <h2>Visual Identity</h2>
                     </div>
                     <div class="text">
                         <p>Sequence Paper is a magazine about time and our relationship to it. The magazine features a non-linear narrative that affectionately blends together different perspectives regarding the past, the present and the future. It aims to capture a distinctive yet timeless editorial identity while simultaneously being contemporary. The magazine can be read from both directions in a palindrome-like sequence. Printed at Newspaper Club, London, in uncoated broadsheet format – with an exclusive edition of 50 copies. Featuring poetry from Johan Nordbäck & Antonella Basagni. Made in collaboration with: Alexander Peri, Clémentine Berglund & Joel Eriksson.</p>
