--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 </div>
             </div>
         </section>
-<!--
+
         <section class="work-wrapper">
             <div class="project">
                 <div class="slick-container">
@@ -253,7 +253,10 @@
                     </div>
                     <div class="image-container">
                         <div class="video">
-                            <video src="video/eric-rosmark-gronsaksdisken.mov" playsinline autoplay muted loop width="100%" height="100%" loading="lazy"></video>
+                            <video src="video/eric-rosmark-gronsaksdisken.mp4" playsinline autoplay muted loop width="100%" height="100%" loading="lazy"></video>
+                        </div>
+                        <div class="image">
+                            <img src="images/gronsaksdisken/eric-rosmark-gronsaksdisken-case-study.jpg" class="desktop-image" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -276,7 +279,7 @@
                 </div>
             </div>
         </section>
-       -->
+       
 
         <section class="work-wrapper">
             <div class="project">
