--- a/index.html
+++ b/index.html
@@ -252,43 +252,6 @@
                         <div class="paginator-right"></div>
                     </div>
                     <div class="image-container">
-                        <div class="video">
-                            <video src="video/eric-rosmark-gronsaksdisken.mp4" playsinline autoplay muted loop width="100%" height="100%" loading="lazy"></video>
-                        </div>
-                        <div class="image">
-                            <img src="images/gronsaksdisken/eric-rosmark-gronsaksdisken-case-study.jpg" class="desktop-image" loading="lazy">
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="title">
-                        <h1>Grönsaksdisken</h1>
-                        <h2 id="year-mobile">2021</h2>
-                    </div>
-                    <div class="roles">
-                        <h2>Art Direction</h2>
-                        <h2>UI / UX Design</h2>
-                        <h2>Development</h2>
-                    </div>
-                    <div class="text">
-                        <p>Have you ever thought about how different vegetables taste depending on what season it is? It can feel difficult to be seasonally smart when navigating through the vegetable counter when we're shopping. Grönsaksdisken (The Vegetable Counter) is an application that helps you stay seasonally smart, all year round, and helps us contribute towards a more sustainable planet! Displayed at the exhibition <a href=”https://www.svenskttenn.com/se/sv/utstallningar/food-for-thought/”>Food for Thought at Svenskt Tenn</a> in the spring of 2021. Made in collaboration with Jonna Lindberg.</p>
-                    </div>
-                    <div class="year">
-                        <h2>2021</h2>
-                    </div>
-                </div>
-            </div>
-        </section>
-       
-
-        <section class="work-wrapper">
-            <div class="project">
-                <div class="slick-container">
-                    <div class="paginator">
-                        <div class="paginator-left"></div>
-                        <div class="paginator-right"></div>
-                    </div>
-                    <div class="image-container">
                         <div class="image">
                             <img src="images/the-glow-pt-2/eric-rosmark-the-glow-pt-2-front.jpg" class="desktop-image" loading="lazy">
                         </div>
@@ -318,6 +281,83 @@
                 </div>
             </div>
         </section>
+
+        <section class="work-wrapper">
+            <div class="project">
+                <div class="slick-container">
+                    <div class="paginator">
+                        <div class="paginator-left"></div>
+                        <div class="paginator-right"></div>
+                    </div>
+                    <div class="image-container">
+                        <div class="video">
+                            <video src="video/eric-rosmark-gronsaksdisken.mp4" playsinline autoplay muted loop width="100%" height="100%" loading="lazy"></video>
+                        </div>
+                        <div class="image">
+                            <img src="images/gronsaksdisken/eric-rosmark-gronsaksdisken-case-study.jpg" class="desktop-image" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="title">
+                        <h1>Grönsaksdisken</h1>
+                        <h2 id="year-mobile">2021</h2>
+                    </div>
+                    <div class="roles">
+                        <h2>Art Direction</h2>
+                        <h2>UI / UX Design</h2>
+                        <h2>Development</h2>
+                    </div>
+                    <div class="text">
+                        <p>Have you ever thought about how different vegetables taste depending on what season it is? It can feel difficult to be seasonally smart when navigating through the vegetable counter when we're shopping. Grönsaksdisken (The Vegetable Counter) is an application that helps you stay seasonally smart, all year round, and helps us contribute towards a more sustainable planet! Displayed at the exhibition <a href=”https://www.svenskttenn.com/se/sv/utstallningar/food-for-thought/”>Food for Thought at Svenskt Tenn</a> in the spring of 2021. Made in collaboration with Jonna Lindberg.</p>
+                    </div>
+                    <div class="year">
+                        <h2>2021</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+        <section class="work-wrapper">
+            <div class="project">
+                <div class="slick-container">
+                    <div class="paginator">
+                        <div class="paginator-left"></div>
+                        <div class="paginator-right"></div>
+                    </div>
+                    <div class="image-container">
+                        <div class="image">
+                            <img src="images/typografi/eric-rosmark-typografi-book-1.jpg" class="desktop-image" loading="lazy">
+                        </div>
+                        <div class="image">
+                            <img src="images/typografi/eric-rosmark-typografi-book-2-3.jpg" class="desktop-image" loading="lazy">
+                        </div>
+                        <div class="image">
+                            <img src="images/typografi/eric-rosmark-typografi-book-4.jpg" class="desktop-image" loading="lazy">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="title">
+                        <h1>Typografi</h1>
+                        <h2 id="year-mobile">2019</h2>
+                    </div>
+                    <div class="roles">
+                        <h2>Art Direction</h2>
+                        <h2>Graphic Design</h2>
+                    </div>
+                    <div class="text">
+                        <p>A spiral bound book about typography. A project about movement, inspired by movie scripts and revisions. Case study featuring the work  of Saul Bass and Richard Alan Greenberg. The first project I did at Beckmans College of Design, together with my talented classmates.</p>
+                    </div>
+                    <div class="year">
+                        <h2>2019</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         
         <section class="info-wrapper-mobile">
         <div class="experience-mobile">
