--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
         <div class="experience">
         <h1>Experience</h1>
         <div class="break"></div>
+        <h2>
+            <a href="https://esseninternational.com/" target="_blank">
+                <h1>Essen International</h1>
+                Junior Designer<br>
+                08/2022 – Present
+            </a>
+        </h2>
+        <div class="break"></div>
             <h2>
                 <a href="http://stockholmdesignlab.se" target="_blank">
                     <h1>Stockholm Design Lab</h1>
@@ -362,6 +370,14 @@
         <section class="info-wrapper-mobile">
         <div class="experience-mobile">
             <h1>Experience</h1>
+            <div class="break"></div>
+            <h2>
+                <a href="https://esseninternational.com/" target="_blank">
+                    <h1>Essen International</h1>
+                    Junior Designer<br>
+                    08/2022 – Present
+                </a>
+            </h2>
             <div class="break"></div>
                 <h2>
                     <a href="http://stockholmdesignlab.se" target="_blank">
