--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                         <h2>Graphic Design</h2>
                     </div>
                     <div class="text">
-                        <p>DDegree Project from Beckman College of Design. Rötter is a visual exploration and documentation of my grandmother's brother Per Rösmarks life and artistry. Per committed suicide at the age of 28 leaving behind an immense amount of art. Although I've never met Per he's always been present both in conversations and on the walls. The project is a process and an attempt to get to know a person by making an artistic collaboration through our related practices. Rötter was realised in a 112 page hand bound book with a link stitched open spine, all set in Neue Haas Grotesk. Displayed at the graduation exhibition <a href=”https://www.beckmans.se/2022”>Formation at Beckmans College of Design</a> in the spring of 2022.</p>
+                        <p>Degree Project from Beckman College of Design. Rötter is a visual exploration and documentation of my grandmother's brother Per Rösmarks life and artistry. Per committed suicide at the age of 28 leaving behind an immense amount of art. Although I've never met Per he's always been present both in conversations and on the walls. The project is a process and an attempt to get to know a person by making an artistic collaboration through our related practices. Rötter was realised in a 112 page hand bound book with a link stitched open spine, all set in Neue Haas Grotesk. Displayed at the graduation exhibition <a href=”https://www.beckmans.se/2022”>Formation at Beckmans College of Design</a> in the spring of 2022.</p>
                     </div>
                     <div class="year">
                         <h2>2022</h2>
