--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                     </div>
                     <div class="roles">
                         <h2>Art Direction</h2>
-                        <h2>Visual Identity</h2>
                         <h2>Product Design</h2>
+                        <h2>Visual Identity</h2>
                         <h2>3D Design</h2>
                     </div>
                     <div class="text">
@@ -189,8 +189,9 @@
                     </div>
                     <div class="roles">
                         <h2>Art Direction</h2>
-                        <h2>Visual Identity</h2>
                         <h2>UX / UI Design</h2>
+                        <h2>Visual Identity</h2>
+                        <h2>Web Design</h2>
                     </div>
                     <div class="text">
                         <p>Visual identity made in collaboration with the second year fashion students at Beckmans College of Design showcasing the creation of magic from materials. The project was realized through a responsive website, a short film, still photography of all 35 looks as well as 13 close-up 3D scans of the materials used to create the different garments. Made in collaboration with Alexander Peri, Alva Nylander, Hedvig Moberg, Joel Eriksson, Linnea Jacobson & Tuva Larsson.</p>
@@ -301,6 +302,42 @@
             <div class="project">
                 <div class="slick-container">
                     <div class="paginator">
+                       <!-- <div class="paginator-left"></div>
+                        <div class="paginator-right"></div>-->
+                    </div>
+                                        <div class="image-container">
+                        <div class="video">
+                            <video src="video/eric-rosmark-formation.mp4" playsinline autoplay muted loop width="100%" height="100%" loading="lazy"></video>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="title">
+                        <h1>Formation</h1>
+                        <h2 id="year-mobile">2022</h2>
+                    </div>
+                    <div class="roles">
+                        <h2>Art Direction</h2>
+                        <h2>UX / UI Design</h2>
+                        <h2>Visual Identity</h2>
+                        <h2>Web Design</h2>
+                    </div>
+                    <div class="text">
+                        <p>Visual Identity and digital platform for Beckmans College of Design's degree exhibition 2022. Formation, the action of forming or process of being formed, is the culmination of the journey all students undergo during their three years at Beckmans College of Design. The school provides the tools which the student use to shape their own design processes, as well as themselves into designers. My key responsibility was to design the website in close collaboration with developer Vincent Orback. Visual identity made in collaboration with: Jonna Lindberg, Maja Schein and Sara Solén.</p>
+                        <div class="break"></div>
+                        <a id="email" href="https://beckmans.se/2022" target="_blank"><p>Explore the digital platform for Formation</p></a>
+                    </div>
+                    <div class="year">
+                        <h2>2022</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="work-wrapper">
+            <div class="project">
+                <div class="slick-container">
+                    <div class="paginator">
                         <div class="paginator-left"></div>
                         <div class="paginator-right"></div>
                     </div>
@@ -358,8 +395,9 @@
                     </div>
                     <div class="roles">
                         <h2>Art Direction</h2>
-                        <h2>UI / UX Design</h2>
-                        <h2>Development</h2>
+                        <h2>Front-End Development</h2>
+                        <h2>UX / UI Design</h2>
+                        <h2>Web Design</h2>
                     </div>
                     <div class="text">
                         <p>Have you ever thought about how different vegetables taste depending on what season it is? It can feel difficult to be seasonally smart when navigating through the vegetable counter when we're shopping. Grönsaksdisken (The Vegetable Counter) is an application that helps you stay seasonally smart, all year round, and helps us contribute towards a more sustainable planet! Displayed at the exhibition <a href=”https://www.svenskttenn.com/se/sv/utstallningar/food-for-thought/”>Food for Thought at Svenskt Tenn</a> in the spring of 2021. Made in collaboration with Jonna Lindberg.</p>
